[package]
name    = "signet"
version = "0.0.1"

edition = "2021"
license = "Apache-2.0"

description = """
code signing tool
"""

[dependencies]
argon2     = "0.4.1"
bpaf       = "0.7.7"
dirs       = "4.0.0"
hex        = "0.4.3"
keyring    = "1.2.0"
rpassword  = "7.2.0"
serde_yaml = "0.9.16"
signature  = "1.6.4"
zeroize    = "1.5.7"

[dependencies.anyhow]
version  = "1.0.68"
features = ["backtrace"]

[dependencies.indexmap]
version  = "1.9.2"
features = ["serde"]

[dependencies.getrandom]
version  = "0.2.8"
features = ["js"]

[dependencies.rand_core]
version  = "0.6.4"
features = ["getrandom"]

[dependencies.serde]
version  = "1.0.152"
features = ["derive"]

[dependencies.ssh-key]
version  = "0.5.1"
features = ["ed25519", "encryption", "rand_core", "serde"]
